Changed machinetype name to lower case

--- a/usr/share/cura/resources/machine_profiles/FabX 1.ini
+++ b/usr/share/cura/resources/machine_profiles/FabX 1.ini
@@ -1,6 +1,6 @@
 [machine]
 machine_name = FabX 1
-machine_type = FabX
+machine_type = fabx
 machine_width = 100
 machine_depth = 100
 machine_height = 100
