Removed older profiles and added FabX pro profiles
Added to path : ../resources/quickprint/profiles/fabxpro

--- a/usr/share/cura/resources/machine_profiles/FabX Pro.ini
+++ b/usr/share/cura/resources/machine_profiles/FabX Pro.ini
@@ -1,65 +1,70 @@
-[info]
-name = High
-order = 10
-material = ABS
-nozzle_size = 0.4
+[machine]
+machine_name = FabX Pro
+machine_type = fabxpro
+machine_width = 100
+machine_depth = 100
+machine_height = 100
+machine_center_is_zero = False
+has_heated_bed = True
+gcode_flavor = RepRap (Marlin/Sprinter)
+extruder_amount = 1
 
 [profile]
-layer_height = 0.06
-wall_thickness = 1.05
+layer_height = 0.2
+wall_thickness = 0.8
 retraction_enable = True
-solid_layer_thickness = 0.72
-fill_density = 22
-print_speed = 30
-print_temperature = 250
+solid_layer_thickness = 1
+fill_density = 35
+print_speed = 40
+print_temperature = 185
 print_temperature2 = 0
 print_temperature3 = 0
 print_temperature4 = 0
 print_temperature5 = 0
-print_bed_temperature = 80
+print_bed_temperature = 70
 support = None
-platform_adhesion = Brim
+platform_adhesion = None
 support_dual_extrusion = Both
 wipe_tower = False
 wipe_tower_volume = 15
 ooze_shield = False
-filament_diameter = 2.85
+filament_diameter = 1.75
 filament_diameter2 = 0
 filament_diameter3 = 0
 filament_diameter4 = 0
 filament_diameter5 = 0
-filament_flow = 100.0
-nozzle_size = 0.35
+filament_flow = 95
+nozzle_size = 0.4
 retraction_speed = 40.0
-retraction_amount = 6.5
+retraction_amount = 4.5
 retraction_dual_amount = 16.5
-retraction_min_travel = 0.7
+retraction_min_travel = 1.5
 retraction_combing = All
 retraction_minimal_extrusion = 0.02
 retraction_hop = 0.0
-bottom_thickness = 0.26
+bottom_thickness = 0.3
 layer0_width_factor = 100
 object_sink = 0.0
 overlap_dual = 0.15
-travel_speed = 120
+travel_speed = 80
 bottom_layer_speed = 20
-infill_speed = 45
-solidarea_speed = 20
+infill_speed = 0.0
+solidarea_speed = 0.0
 inset0_speed = 20
 insetx_speed = 30
-cool_min_layer_time = 3
+cool_min_layer_time = 5
 fan_enabled = True
 skirt_line_count = 1
 skirt_gap = 3.0
 skirt_minimal_length = 150.0
 fan_full_height = 0.5
-fan_speed = 20
+fan_speed = 100
 fan_speed_max = 100
 cool_min_feedrate = 10
 cool_head_lift = False
 solid_top = True
 solid_bottom = True
-fill_overlap = 10
+fill_overlap = 15
 perimeter_before_infill = False
 support_type = Lines
 support_angle = 60
